--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@types/node": "^18.11.9",
+    "aws-sdk": "^2.1264.0",
     "dotenv": "^16.0.3",
     "typescript": "^4.9.3"
   }
