CHORE: Env.example

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@
 AWS_USERNAME=your_aws_username
 AWS_ACCESS_KEY_ID=your_aws_access_key_id
 AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
+AWS_REGION=eu-central-1
+
+AWS_BUCKET_NAME=int-sandbox-c360-kpf-bucket
